@@ -1,2 +1,2 @@
-#define VERSION "4.05.00"
-#define YEARS   "2005-2013"
+#define VERSION "4.06.00"
+#define YEARS   "2005-2014"
