@@ -12,28 +12,26 @@ void Generator::classHeader() const
     if (d_stat.set(classHeader))
     {
                 // class-name must match
-        warnExisting(classHeader, "class-name", d_options.className(),
+        warnExisting(classHeader, "class-name", 
                                 "^class " + d_options.className() + "\\b");
 
         warnExisting(classHeader, "baseclass-header", 
-                    d_options.baseclassHeaderName(), 
                     "^#include \"" + d_options.baseclassHeaderName() + '"');
 
                 // if a namespace was provided: it must be present
         if (not d_options.nameSpace().empty())
-            warnExisting(classHeader, "namespace", d_options.nameSpace(),
+            warnExisting(classHeader, "namespace", 
                             "^namespace " + d_options.nameSpace() + "\\b");
 
         if (d_options.specified("scanner"))
         {
                 // the 'scanner' include spec. must be present
-            warnExisting(classHeader, "scanner", d_options.scannerInclude(), 
+            warnExisting(classHeader, "scanner", 
                                 "^#include " + d_options.scannerInclude());
 
                 // the 'scanner-class-name must be present
             if (d_options.specified("scanner-class-name"))
                 warnExisting(classHeader, "scanner-class-name",
-                            d_options.scannerClassName(), 
                             "^[[:space:]]*" + 
                                 d_options.scannerClassName() + 
                                 " d_scanner;");
