@@ -1,13 +1,12 @@
 #include "generator.ih"
 
 void Generator::warnExisting(string const &fileName, string const &option,
-                             string const &expectedOptionValue,
-                            string const &pattern) const
+                             string const &pattern) const
 {
+    if (not d_options.specified(option))
+        return;
+
     if (not grep(fileName, pattern))
         wmsg << '`' << fileName << 
-            "' exists, option/directive `" << option << ' ' <<
-            expectedOptionValue << "' ignored" << 
-//            "\npattern = `" << pattern << '\'' <<
-            endl;
+            "' exists, option/directive `" << option << "' ignored" << endl;
 }
